обновлена лабораторная работа 1

--- a/lab_1/lab_1.ipynb
+++ b/lab_1/lab_1.ipynb
@@ -20,23 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "56c7f02e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Вы ввели число 5\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input(\"Введите число: \"))\n",
     "print(f\"Вы ввели число {n}\")  \n",
@@ -55,19 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8d724a4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Вы ввели числа 3 и 2\n",
-      "Большее число: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b = int(input(\"Введите первое число: \")), int(input(\"Введите второе число: \"))\n",
     "\n",
@@ -100,18 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9e3c5ad8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Привет, Василий!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def greet(name: str) -> str:\n",
     "    \"\"\" Возвращает переданное имя\"\"\"\n",
@@ -133,18 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2935ec95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "625\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def square(number: int) -> int:\n",
     "    \"\"\" Возвращает квадрат переданного числа \"\"\"\n",
@@ -164,18 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6c00794d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Большее число: 40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def max_of_two(a: int, b: int)-> str:\n",
     "    \"\"\" Принимает 2 числа и возвращает большее из них \"\"\"\n",
@@ -204,16 +158,7 @@
    "execution_count": null,
    "id": "dcb66dc7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Имя: Василий\n",
-      "Возраст: 29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def describe_person(name: str, age:int=30) -> str:\n",
     "    return f\"Имя: {name}\\nВозраст: {age}\"\n",
@@ -232,20 +177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d3bb1860",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_prime(n:int)->bool:\n",
     "    \"\"\" Возвращает true, если число простое. \n",
@@ -260,6 +195,123 @@
     "print(is_prime(2))\n",
     "print(is_prime(17))\n",
     "print(is_prime(20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a682a7d3",
+   "metadata": {},
+   "source": [
+    "### Работа с файлами в Python: открытие, чтение, запись, работа с исключениями"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827fc4bb",
+   "metadata": {},
+   "source": [
+    "#### Открытие и чтение файла.\n",
+    "1. Создайте текстовый файл example.txt и заполните его несколькими строками текста.\n",
+    "2. Напишите функцию на Python, которая открывает файл example.txt в режиме чтения и выводит его содержимое на экран.\n",
+    "3. Используйте разные методы чтения файла: чтение всего файла сразу, построчное чтение, реализуйте выбор типа чтения в принимаемых аргументах функции.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d80f6ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reading_example(mode: str, path:str):\n",
+    "    \"\"\" Считывает файл полностью или в построчном режиме и выводит его содержимое \"\"\"\n",
+    "    \n",
+    "    with open(path, 'r') as file:\n",
+    "         if mode == 'total':\n",
+    "            content = file.read()\n",
+    "            print('Все содержимое файла:')\n",
+    "            print(content)\n",
+    "\n",
+    "         elif mode == 'string':\n",
+    "            print('Режим построчного чтения:')\n",
+    "            for line in file:\n",
+    "                print(line)\n",
+    "         else:\n",
+    "            print('Режим считывания не определен')\n",
+    "\n",
+    "reading_example('total', 'example.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ae2758e",
+   "metadata": {},
+   "source": [
+    "#### Запись в файл\n",
+    "1. Напишите программу, которая запрашивает у пользователя текст и записывает его в новый файл user_input.txt.\n",
+    "2. Реализуйте функционал добавления текста в существующий файл, не удаляя его предыдущее содержимое.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6e5bdfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def export_to_file(path: str = 'user_input.txt', mode: str = 'append'):\n",
+    "    \"\"\" Запрашивает текст и дозаписывает\\перезаписывает его в файл \"\"\"\n",
+    "    text = input('Введите текст для добавления в файл: ')\n",
+    "\n",
+    "    if mode == 'append':\n",
+    "        with open(path, 'a') as file:\n",
+    "            file.write(f'\\n{text}')\n",
+    "            print(f'Текст {text} успешно добавлен в файл')\n",
+    "    if mode == 'rewrite':\n",
+    "        with open(path, 'w') as file:\n",
+    "            file.write(text)\n",
+    "            print('Файл успешно перезаписан')\n",
+    "\n",
+    "\n",
+    "export_to_file(mode = 'rewrite')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428f4753",
+   "metadata": {},
+   "source": [
+    "#### Модификация задачи 1.\n",
+    "Модифицируйте программу из Задания 1 так, чтобы она корректно обрабатывала исключение, возникающее при попытке открыть несуществующий файл. Вместо вывода ошибки программа должна выводить пользователю понятное сообщение. Используйте в блоке try except следующий класс исключений: FileNotFoundError."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6167d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reading_example(mode: str, path:str):\n",
+    "    \"\"\" Считывает файл полностью или в построчном режиме и выводит его содержимое \"\"\"\n",
+    "\n",
+    "    try: \n",
+    "        with open(path, 'r') as file:\n",
+    "            if mode == 'total':\n",
+    "                content = file.read()\n",
+    "                print('Все содержимое файла:')\n",
+    "                print(content)\n",
+    "\n",
+    "            elif mode == 'string':        \n",
+    "                print('Режим построчного чтения:')\n",
+    "                for line in file:\n",
+    "                    print(line, end = '')\n",
+    "            else:\n",
+    "                 print('Режим считывания не определен')\n",
+    "    except FileNotFoundError:\n",
+    "        print(f'Файл {path} не обнаружен')\n",
+    "\n",
+    "reading_example('total', 'example2.txt')"
    ]
   },
   {
@@ -281,18 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "efa004d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -309,18 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6ff05796",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-10-17 14:25:18.483347\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
@@ -344,15 +380,7 @@
    "execution_count": null,
    "id": "63fbcf5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from my_module import sum_of_two\n",
     "\n",
@@ -372,19 +400,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "87cc6cba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "Большее число: 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from my_package import sum_of_two, max_of_two\n",
     "\n",
@@ -394,19 +413,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "cbcd36d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "акортС\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from my_package import reverse_string, count_words\n",
     "\n",
